--- a/public/sass/Utils/_variables.scss
+++ b/public/sass/Utils/_variables.scss
@@ -1,5 +1,5 @@
 $background:#aba9a936;
 $grisfoncé: #333232db;
-$grisclair: #80797912;
+$grisclair: #f2f2f2;
 $ombres: rgba(0,0,0,.25);
 $violet: #9356DC
