--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -29,6 +29,48 @@
   -webkit-text-fill-color: transparent;
 }
 
+.section-menu__article:hover .section-menu__article__animation {
+  transform: translateX(-100%);
+  visibility: visible;
+  -webkit-transition: all 0.5s ease-in;
+}
+.section-menu__article:hover .section-menu__article__description {
+  /*margin-right: 9rem;*/
+  margin-right: 0rem;
+}
+.section-menu__article:hover .div-check-circle {
+  transform: rotate(-380deg);
+  transition-duration: 1s;
+}
+.section-menu__article .section-menu__article__description {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
+.section-menu__article:hover .section-menu__article__description {
+  width: 75%;
+  margin-right: 2rem;
+}
+.section-menu__article .section-menu__article__animation {
+  background: #99E2D0;
+  width: 20%;
+  position: absolute;
+  top: 0;
+  /*right: 0;*/
+  visibility: hidden;
+  left: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0 16px 16px 0;
+}
+.section-menu__article .section-menu__article__animation .fa-check-circle {
+  font-size: x-large;
+  color: white;
+  font-weight: bold;
+}
+
 @font-face {
   font-family: "shrikhandregular";
   src: url("/public/font/shrikhand-regular-webfont.woff2") format("woff2"), url("/public/font/shrikhand-regular-webfont.woff") format("woff");
@@ -144,7 +186,7 @@ h2 {
   display: flex;
   flex-direction: column;
   position: relative;
-  border: solid #f2f2f2 1px;
+  border: solid #f2f2f2 0px;
   background-color: white;
   border-radius: 16px;
   padding: 0.5rem 0 0.5rem 0.5rem;
@@ -167,10 +209,11 @@ h2 {
   margin: 0;
 }
 #section-menu_ .main .section-menu__article span {
-  position: absolute;
+  /*position: absolute;
   top: 2.8rem;
-  right: 1rem;
+  right: 1rem;*/
   font-weight: bold;
+  /*margin-right: 2rem;*/
 }
 #section-menu_ .main .bouton-commander {
   display: flex;
