--- a/public/sass/Layout/_container.scss
+++ b/public/sass/Layout/_container.scss
@@ -37,7 +37,7 @@
         margin-top: 2.5rem;
     }
     .section-menu__soulignement {
-        border-top: solid #99E2D0;
+        border-top: solid $vert;
         width: 3rem;
         margin-bottom: 1rem;
         }
@@ -45,7 +45,7 @@
         display: flex;
         flex-direction: column;
         position: relative;
-        border: solid $grisclair 1px;
+        border: solid $grisclair 0px;
         background-color: white;
         border-radius: 16px;
         padding: 0.5rem 0 0.5rem 0.5rem;
@@ -67,10 +67,11 @@
             margin: 0;
         }
         span {
-            position: absolute;
+            /*position: absolute;
             top: 2.8rem;
-            right: 1rem; 
+            right: 1rem;*/ 
             font-weight: bold; 
+            /*margin-right: 2rem;*/
         }
     }
     .bouton-commander {
