--- a/public/sass/Utils/_animations.scss
+++ b/public/sass/Utils/_animations.scss
@@ -18,7 +18,7 @@
         opacity: 1;
         transition: opacity 2s;
     }
-    
+
     .coeur2 {
         top: 0.5rem;
         position: absolute;
@@ -28,4 +28,48 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
+}
+.section-menu__article {
+    &:hover .section-menu__article__animation {
+        transform: translateX(-100%);
+        visibility: visible;
+        -webkit-transition: all .5s ease-in;
+    }
+    &:hover .section-menu__article__description {
+        /*margin-right: 9rem;*/ 
+        margin-right: 0rem;
+    }
+    &:hover .div-check-circle {
+        transform: rotate(-380deg);
+        transition-duration: 1s;
+    }
+    .section-menu__article__description {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        
+    }
+    &:hover .section-menu__article__description {
+        width: 75%;
+        margin-right: 2rem;
+    }
+.section-menu__article__animation {
+    background: $vert;
+    width: 20%;
+    position: absolute;
+    top: 0;
+    /*right: 0;*/
+    visibility: hidden;
+    left: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0 16px 16px 0;
+    .fa-check-circle {
+        font-size: x-large;
+        color: white;
+        font-weight: bold;
+    }
+}
 }
