--- a/public/sass/Utils/_variables.scss
+++ b/public/sass/Utils/_variables.scss
@@ -2,4 +2,5 @@ $background:#aba9a936;
 $grisfoncé: #333232db;
 $grisclair: #f2f2f2;
 $ombres: rgba(0,0,0,.25);
-$violet: #9356DC
+$violet: #9356DC;
+$vert: #99E2D0
