--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -71,20 +71,25 @@
   font-weight: bold;
 }
 
-@font-face {
-  font-family: "shrikhandregular";
-  src: url("/public/font/shrikhand-regular-webfont.woff2") format("woff2"), url("/public/font/shrikhand-regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+/*@font-face {
+    font-family: 'shrikhandregular';
+    src: url('/public/font/shrikhand-regular-webfont.woff2') format('woff2'),
+         url('/public/font/shrikhand-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
+
 @font-face {
-  font-family: "roboto";
-  src: url("/public/font/roboto-light.woff2") format("woff2"), url("/public/font/roboto-light.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
+    font-family: 'roboto';
+    src: url('/public/font/roboto-light.woff2') format('woff2'),
+         url('/public/font/roboto-light.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}*/
 body {
-  font-family: "roboto", sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
 }
 
@@ -104,7 +109,7 @@ header .fa-arrow-left {
 }
 header h1 {
   width: 10rem;
-  font-family: "shrikhandregular";
+  font-family: "Shrikhand", cursive;
   margin: 0;
 }
 header h1 a {
@@ -120,7 +125,7 @@ footer h1 {
   color: white;
   margin-left: 2.4rem;
   font-size: larger;
-  font-family: "shrikhandregular";
+  font-family: "Shrikhand", cursive;
 }
 footer ul {
   list-style-type: none;
@@ -144,10 +149,6 @@ footer ul a .fa, footer ul a .fas {
   width: 100%;
   height: 18rem;
   object-fit: cover;
-}
-
-h1 {
-  font-family: "shrikhandregular", sans-serif;
 }
 
 h2 {
@@ -271,6 +272,10 @@ h2 {
   width: 13rem;
   justify-content: center;
   box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+}
+.section-explorer a:hover {
+  transform: scale(1.1);
+  transition: transform 0.1s;
 }
 
 .section-menu h1 {
@@ -428,6 +433,9 @@ h2 {
     width: 48%;
   }
 }
+.section-restaurants div article:hover {
+  transform: scale(1.02);
+}
 .section-restaurants div article a {
   color: black;
   text-decoration: none;
@@ -455,6 +463,7 @@ h2 {
   margin: 1rem 0 0.3rem 1rem;
   font-size: 1.3em;
   background-color: white;
+  font-weight: bold;
 }
 .section-restaurants div article a .section-restaurants__article p {
   margin: 0 0 0 1rem;
