--- a/public/sass/Base/_base.scss
+++ b/public/sass/Base/_base.scss
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
     font-family: 'shrikhandregular';
     src: url('/public/font/shrikhand-regular-webfont.woff2') format('woff2'),
          url('/public/font/shrikhand-regular-webfont.woff') format('woff');
@@ -14,9 +14,9 @@
     font-weight: normal;
     font-style: normal;
 
-}
+}*/
 
 body {
-    font-family: 'roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
 }
