--- a/public/sass/Layout/_header.scss
+++ b/public/sass/Layout/_header.scss
@@ -13,7 +13,7 @@ header {
     }
     h1 {
         width: 10rem;
-        font-family: 'shrikhandregular';
+        font-family: 'Shrikhand', cursive;
         margin: 0;
         a {
             text-decoration: none;
@@ -29,7 +29,7 @@ footer {
         color: white;
         margin-left: 2.4rem;
         font-size: larger;
-        font-family: 'shrikhandregular';
+        font-family: 'Shrikhand', cursive;
     }
     ul {
         list-style-type: none;
