--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -45,11 +45,10 @@
 .section-menu__article .section-menu__article__description {
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  width: 95%;
 }
 .section-menu__article:hover .section-menu__article__description {
   width: 75%;
-  margin-right: 2rem;
 }
 .section-menu__article .section-menu__article__animation {
   background: #99E2D0;
@@ -194,6 +193,9 @@ h2 {
   margin-bottom: 1rem;
   box-shadow: 3px 3px 9px #aba9a936;
   cursor: pointer;
+  /*&:hover .section-menu__article__description {
+      width: 75%;
+  }*/
 }
 #section-menu_ .main .section-menu__article h2 {
   margin: 0.5rem 0 0.5rem 0;
