--- a/public/sass/Layout/_container.scss
+++ b/public/sass/Layout/_container.scss
@@ -48,6 +48,9 @@
         margin-bottom: 1rem;
         box-shadow: 3px 3px 9px $background;
         cursor: pointer;
+        /*&:hover .section-menu__article__description {
+            width: 75%;
+        }*/
         h2 {
             margin: 0.5rem 0 0.5rem 0;
             font-size: large;  
