--- a/public/sass/Layout/_container.scss
+++ b/public/sass/Layout/_container.scss
@@ -64,6 +64,9 @@
         }
         p {
             margin: 0;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+            overflow: hidden;
         }
         span {
             /*position: absolute;
