--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -237,6 +237,10 @@ h2 {
   margin-bottom: 2rem;
   box-shadow: 3px 3px 9px #aba9a936;
 }
+#section-menu_ .main .bouton-commander a:hover {
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
+  transition-duration: 0.25s;
+}
 
 .localisation {
   background-color: #aba9a936;
@@ -279,8 +283,8 @@ h2 {
   box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
 }
 .section-explorer a:hover {
-  transform: scale(1.1);
-  transition: transform 0.1s;
+  box-shadow: 0.25rem 0.25rem 10px rgba(146, 11, 11, 0.5);
+  transition-duration: 0.25s;
 }
 
 .section-menu h1 {
