--- a/public/sass/Pages/_page1.scss
+++ b/public/sass/Pages/_page1.scss
@@ -38,8 +38,8 @@
         justify-content: center;
         box-shadow: .25rem .25rem 10px $ombres;
         &:hover {
-            transform: scale(1.1);
-            transition: transform 0.1s;
+            box-shadow: .25rem .25rem 10px rgba(146, 11, 11, 0.5);
+            transition-duration: .25s;
         }
     }
 }
