--- a/public/sass/Pages/_page1.scss
+++ b/public/sass/Pages/_page1.scss
@@ -40,6 +40,7 @@
         &:hover {
             box-shadow: .25rem .25rem 10px rgba(146, 11, 11, 0.5);
             transition-duration: .25s;
+            filter: brightness(1.1);
         }
     }
 }
