--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -55,7 +55,7 @@
   width: 20%;
   position: absolute;
   top: 0;
-  /*right: 0;*/
+  right: 0;
   visibility: hidden;
   left: 100%;
   height: 100%;
@@ -90,6 +90,7 @@
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
+  overflow-x: hidden;
 }
 
 header {
@@ -284,7 +285,7 @@ h2 {
   box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
 }
 .section-explorer a:hover {
-  box-shadow: 0.25rem 0.25rem 10px rgba(146, 11, 11, 0.5);
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.5);
   transition-duration: 0.25s;
   filter: brightness(1.1);
 }
