--- a/public/sass/Utils/_animations.scss
+++ b/public/sass/Utils/_animations.scss
@@ -57,7 +57,7 @@
     width: 20%;
     position: absolute;
     top: 0;
-    /*right: 0;*/
+    right: 0;
     visibility: hidden;
     left: 100%;
     height: 100%;
@@ -65,6 +65,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 0 16px 16px 0;
+    
     .fa-check-circle {
         font-size: x-large;
         color: white;
