--- a/public/sass/Layout/_container.scss
+++ b/public/sass/Layout/_container.scss
@@ -20,6 +20,11 @@
         border-radius: 2.5rem 2.5rem 0 0;
         padding:2rem 2rem 0 2rem; 
         background-color: #f2f2f2;
+        h2 {
+            font-size: x-large;
+            font-weight: bold;
+            font-family: 'shrikhand', cursive;
+        }
         .fa-heart {
             margin-top: 3rem;
         } 
