--- a/public/sass/Utils/_animations.scss
+++ b/public/sass/Utils/_animations.scss
@@ -30,6 +30,9 @@
     }
 }
 .section-menu__article {
+    animation: fadein 2s;
+    -moz-animation: fadein 2s;
+    -webkit-animation: fadein 2s;
     &:hover .section-menu__article__animation {
         transform: translateX(-100%);
         visibility: visible;
@@ -72,4 +75,69 @@
         font-weight: bold;
     }
 }
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.loadcontent
+{
+    z-index: 3;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    display:  flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF80;
+    animation: loadinger 0.1s;
+    animation-delay: 2.9s;
+    animation-fill-mode: both;
+}
+
+.loading
+{
+    border: 5px solid #9356DC;
+    border-top: 5px solid #99E2D0;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+    animation: loading 1s ease-in-out;
+    animation-iteration-count: 3;
+}
+@keyframes loading
+{
+    0%
+    { 
+        transform: rotate(0deg); 
+    }
+    100%
+    { 
+        transform: rotate(360deg);
+    }
+}
+
+
+@keyframes loadinger
+{
+    100%
+    {
+       opacity: 0;
+       z-index: -1;
+    }
 }
