--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -29,11 +29,6 @@
   -webkit-text-fill-color: transparent;
 }
 
-.section-menu__article {
-  animation: fadein 2s;
-  -moz-animation: fadein 2s;
-  -webkit-animation: fadein 2s;
-}
 .section-menu__article:hover .section-menu__article__animation {
   transform: translateX(-100%);
   visibility: visible;
@@ -75,23 +70,8 @@
   font-weight: bold;
 }
 
-@keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-@-moz-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
 .loadcontent {
+  z-index: 3;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -126,6 +106,19 @@
   100% {
     opacity: 0;
     z-index: -1;
+  }
+}
+@keyframes scale {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(105%);
+  }
+  100% {
+    transform: scale(100%);
   }
 }
 /*@font-face {
@@ -216,6 +209,15 @@ h2 {
 
 #section-menu_ {
   background-color: #f2f2f2;
+}
+#section-menu_ .column1 {
+  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0ms 1;
+}
+#section-menu_ .column2 {
+  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.2s 1;
+}
+#section-menu_ .column3 {
+  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.4s 1;
 }
 #section-menu_ .nom-restaurant {
   position: relative;
