--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,9 +30,9 @@
 }
 
 .section-menu__article {
-  animation: fadein 2s;
+  /*animation: fadein 2s;
   -moz-animation: fadein 2s;
-  -webkit-animation: fadein 2s;
+  -webkit-animation: fadein 2s;*/
 }
 .section-menu__article:hover .section-menu__article__animation {
   transform: translateX(-100%);
@@ -75,22 +75,23 @@
   font-weight: bold;
 }
 
-@keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+/*@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
+
 @-moz-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}*/
 .loadcontent {
   z-index: 3;
   position: fixed;
