--- a/public/sass/Layout/_container.scss
+++ b/public/sass/Layout/_container.scss
@@ -14,6 +14,15 @@
 
 #section-menu_ {
     background-color: $grisclair;
+    .column1 {
+        animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0ms 1;
+    }
+    .column2 {
+        animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.2s 1;
+    }
+    .column3 {
+        animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.4s 1;
+    }
     .nom-restaurant {
         position: relative;
         margin-top: -2rem;
@@ -106,3 +115,4 @@
     }
     }
 }
+
