--- a/public/sass/Utils/_animations.scss
+++ b/public/sass/Utils/_animations.scss
@@ -30,9 +30,6 @@
     }
 }
 .section-menu__article {
-    animation: fadein 2s;
-    -moz-animation: fadein 2s;
-    -webkit-animation: fadein 2s;
     &:hover .section-menu__article__animation {
         transform: translateX(-100%);
         visibility: visible;
@@ -75,24 +72,6 @@
         font-weight: bold;
     }
 }
-}
-
-@keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@-moz-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
 }
 
 .loadcontent
@@ -139,5 +118,21 @@
     {
        opacity: 0;
        z-index: -1;
+    }
+}
+
+@keyframes scale {
+    0%{
+        opacity: 0;
+        transform: scale(0);
+    }
+    
+    50%{
+        opacity: 1;
+        transform: scale(105%);
+    }
+
+    100%{
+        transform: scale(100%);
     }
 }
