--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
   text-rendering: auto;
   line-height: 1;
   position: absolute;
-  top: 0.5rem;
+  top: 13.5rem;
   right: 2rem;
 }
 
@@ -20,19 +20,18 @@
   transition: opacity 2s;
 }
 .section-menu__animation .coeur2 {
-  top: 0.5rem;
+  top: 13.5rem;
   position: absolute;
   right: 2rem;
   font-size: x-large;
   background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  cursor: pointer;
 }
 
-.section-menu__article {
-  /*animation: fadein 2s;
-  -moz-animation: fadein 2s;
-  -webkit-animation: fadein 2s;*/
+.section-menu__article:hover {
+  overflow: hidden;
 }
 .section-menu__article:hover .section-menu__article__animation {
   transform: translateX(-100%);
@@ -40,7 +39,6 @@
   -webkit-transition: all 0.5s ease-in;
 }
 .section-menu__article:hover .section-menu__article__description {
-  /*margin-right: 9rem;*/
   margin-right: 0rem;
 }
 .section-menu__article:hover .div-check-circle {
@@ -75,23 +73,6 @@
   font-weight: bold;
 }
 
-/*@keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
-@-moz-keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}*/
 .loadcontent {
   z-index: 3;
   position: fixed;
@@ -128,6 +109,19 @@
   100% {
     opacity: 0;
     z-index: -1;
+  }
+}
+@keyframes scale {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(105%);
+  }
+  100% {
+    transform: scale(100%);
   }
 }
 /*@font-face {
@@ -218,6 +212,15 @@ h2 {
 
 #section-menu_ {
   background-color: #f2f2f2;
+}
+#section-menu_ .column1 {
+  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0ms 1;
+}
+#section-menu_ .column2 {
+  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.2s 1;
+}
+#section-menu_ .column3 {
+  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.4s 1;
 }
 #section-menu_ .nom-restaurant {
   position: relative;
