--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -8,7 +8,7 @@
   text-rendering: auto;
   line-height: 1;
   position: absolute;
-  top: 0.5rem;
+  top: 13.5rem;
   right: 2rem;
 }
 
@@ -20,13 +20,14 @@
   transition: opacity 2s;
 }
 .section-menu__animation .coeur2 {
-  top: 0.5rem;
+  top: 13.5rem;
   position: absolute;
   right: 2rem;
   font-size: x-large;
   background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  cursor: pointer;
 }
 
 .section-menu__article:hover {
@@ -113,14 +114,11 @@
 @keyframes scale {
   0% {
     opacity: 0;
-    transform: scale(0);
-  }
-  50% {
-    opacity: 1;
-    transform: scale(105%);
+    transform: translateY(10px);
   }
   100% {
-    transform: scale(100%);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 /*@font-face {
