--- a/public/sass/Utils/_animations.scss
+++ b/public/sass/Utils/_animations.scss
@@ -7,6 +7,14 @@
         text-rendering: auto;
         line-height: 1;
         position: absolute;
+        top: 0.5rem;
+        right: 2rem;
+    }
+    .coeuraccueil1 {
+        display: inline-block;
+        text-rendering: auto;
+        line-height: 1;
+        position: absolute;
         top: 13.5rem;
         right: 2rem;
     }
@@ -20,7 +28,7 @@
     }
 
     .coeur2 {
-        top: 13.5rem;
+        top: 0.5rem;
         position: absolute;
         right: 2rem;
         font-size: x-large;
@@ -28,6 +36,16 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         cursor: pointer;
+    }
+    .coeuraccueil2 {
+        top: 13.5rem;
+        position: absolute;
+        right: 2rem;
+        font-size: x-large;
+        background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        cursor: pointer; 
     }
 }
 .section-menu__article {
