--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -5,8 +5,8 @@
 }
 .section-menu__coeur .coeur1 {
   display: inline-block;
-  text-rendering: auto;
-  line-height: 1;
+  /*text-rendering: auto;
+  line-height: 1;*/
   position: absolute;
   top: 0.5rem;
   right: 2rem;
@@ -25,7 +25,7 @@
 }
 .section-menu__animation:hover {
   opacity: 1;
-  transition: opacity 2s;
+  transition: opacity 1s;
 }
 .section-menu__animation .coeur2 {
   top: 0.5rem;
@@ -54,7 +54,7 @@
 .section-menu__article:hover .section-menu__article__animation {
   transform: translateX(-100%);
   visibility: visible;
-  -webkit-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
 }
 .section-menu__article:hover .section-menu__article__description {
   margin-right: 0rem;
@@ -139,7 +139,6 @@
     transform: translateY(0);
   }
 }
-
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -213,13 +212,13 @@ h2 {
   background-color: #f2f2f2;
 }
 #section-menu_ .column1 {
-  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0ms 1;
+  animation: scale 2s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0ms 1;
 }
 #section-menu_ .column2 {
-  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.2s 1;
+  animation: scale 2s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.2s 1;
 }
 #section-menu_ .column3 {
-  animation: scale 1s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.4s 1;
+  animation: scale 2s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.4s 1;
 }
 #section-menu_ .nom-restaurant {
   position: relative;
@@ -448,7 +447,6 @@ h2 {
 .section-restaurants div {
   width: 100%;
   overflow-x: auto;
-  
 }
 @media all and (min-width: 701px) {
   .section-restaurants div {
