--- a/public/css/la-palette-du-gout.css
+++ b/public/css/la-palette-du-gout.css
@@ -212,13 +212,13 @@ h2 {
   background-color: #f2f2f2;
 }
 #section-menu_ .column1 {
-  animation: scale 2s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0ms 1;
+  animation: scale 2s  0ms 1;
 }
 #section-menu_ .column2 {
-  animation: scale 2s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.2s 1;
+  animation: scale 2s 0.2s 1;
 }
 #section-menu_ .column3 {
-  animation: scale 2s cubic-bezier(0.5, 0.5, 0.4, 1.2) 0.4s 1;
+  animation: scale 2s 0.4s 1;
 }
 #section-menu_ .nom-restaurant {
   position: relative;
